fixes flicker

--- a/src/app/modules/loader/loader.scss
+++ b/src/app/modules/loader/loader.scss
@@ -5,6 +5,7 @@ $transition-type: cubic-bezier(0.550, 0.055, 0.675, 0.190);
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
   
   .loader_container {
     position: absolute;
